fix box size on tablet and desktop

--- a/pages/register/register.css
+++ b/pages/register/register.css
@@ -4,9 +4,11 @@
     margin: 0;
 }
 body{
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 100vh;
 }
 #head{
@@ -184,7 +186,7 @@ input{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         margin-top: 9px;
     }
     #loginBox{
